ALignment issue solvng

--- a/src/assets/scss/header.scss
+++ b/src/assets/scss/header.scss
@@ -71,6 +71,8 @@ header{
         top: 0;
         left: 0;
         z-index: 999;
+        width: 100%;
+        padding-top: 10px;
         &.sticky-header{
             position: sticky;
             width: 100%;
@@ -152,4 +154,13 @@ header{
     .fp-tableCell{
         height: auto !important;
     }
+}
+.header-right{
+    position: fixed;
+    right: 50px;
+    width: 100px;
+    display: flex;
+    align-items: center;
+    top: 16px;
+    z-index: 9999;
 }
